--- a/ansible-basicinside.de.yml
+++ b/ansible-basicinside.de.yml
@@ -2,7 +2,6 @@
   sudo: yes
   vars:
    - docroot: /var/www/
-   - local_docroot: ./docroot/
   tasks:
    - name: Install Apache2
      apt: pkg=apache2 state=installed update_cache=true
@@ -15,5 +14,5 @@
 
    - name: Sync Web Root
      when: webroot_installed|success
-     copy: src="{{item}}" dest="{{docroot}}/"
-     with_lines: find "{{local_docroot}}" -type f
+     sudo: no
+     synchronize: src="./jekyll/_site/" dest="{{ docroot}}" rsync_path="sudo rsync"
